bug: Circles were not showing on mobile devices.

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -42,7 +42,7 @@
 	}
 	
 	/* Show circles */
-	section#projects-experience div.inner div > span:before {
+	section#projects-experience div.inner a > span:before {
 		transform: scale(1);
 		background-color: #F9C776;
 	}
